<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_joystick</name>
  <version>0.0.1</version>
  <description>
     Joytick GUI to guide your vehicule thru a map.
  </description>
  <maintainer email="inaki.lorente@ageve.net">Iñaki Lorente</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--QT-->
  <build_depend>qtbase5-dev</build_depend>
  <!--ROS2-->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
		<build_type>ament_cmake</build_type>
	</export>

</package>